ehcache-2.3.1
==================
        <release version="2.3.1" date="2010-12-10" description="Bug fixes">
            <action dev="Ludovic Orban" type="fix" issue="DEV-5042">
                Fixed big memory RMI replication by storing non-serializable key list into a
                serializable one.
            </action>  
            <action dev="Ludovic Orban" type="fix" issue="EHC-808">
                Fixed memory leak in CacheManager & Configuration.
            </action>
        </release>   

ehcache-2.3.0
==================

        <release version="2.3.0" date="2010-10-15" description="Major release with new features">
            <action dev="Gary Keim" type="add">
                Additional statistics that break out missNotFound into missInMemory, missOffHeap, and
                missOnDisk.
            </action>
            <action dev="Chris Dennis" type="add">
                Extend Ehcache existing in-memory and on-disk concepts to include off-heap as an additional
                possible location.
            </action>
            <action dev="Chris Dennis" type="add">
                Add the ability for store implementations to return a store specific MBean implementation
                that is exposed in the same manner as the existing Ehcache MBeans.
            </action>
            <action dev="Chris Dennis" type="add" issue="EHC-778">
                Restore support for the disk access stripes configuration property in the disk store
                implementation.
            </action>
            <action dev="Greg Luck" type="fix">
                EHC-740. Pick up "Read timed out" in RMI UnmarshalException.
            </action>
            <action dev="Greg Luck" type="fix">
                Throw an InvalidConfigurationException when a cache is created from CacheConfiguration
                without specifying a name.
            </action>
            <action dev="Greg Luck" type="update">