@@ -1,3 +1,11 @@
+ehcache-2.3.2
+==================
+        <release version="2.3.2" date="2011-02-15" description="Bug fixes">
+            <action dev="Chris Dennis" type="fix" issue="EHC-805">
+               Blocking cache can create several StripedReadWriteLockSync
+            </action>
+        </release>
+
 ehcache-2.3.1
 ==================
         <release version="2.3.1" date="2010-12-10" description="Bug fixes">
